--- a/style.css
+++ b/style.css
@@ -28,9 +28,20 @@
 
 /* Pixel Board */
 .pixel {
+  box-sizing:content-box;
   border: 1px solid black;
   height: 40px;
   width: 40px;
   display: inline-block;
   background-color: white;
+  padding: 0;
+  margin: 0;
+}
+
+.linha {
+    width: fit-content;
+    line-height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
