--- a/style.css
+++ b/style.css
@@ -78,11 +78,11 @@ h1 {
 }
 
 .linha {
-  width: fit-content;
   line-height: 0;
   margin: 0;
   padding: 0;
   border: 0;
+  letter-spacing: 0;
   vertical-align: middle;
   text-align: center;
 }
